2010-02-26 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 RC 1 released.

2010-02-25 S. Thiell <stephane.thiell@cea.fr>

	* Important code cleaning (use absolute imports, remove some unused
	imports, remove duplicate code, etc. thanks to pylint).

2010-02-22 S. Thiell <stephane.thiell@cea.fr>

	* scripts/nodeset.py: Change command syntax: operations are now specified
	inline between nodesets (trac ticket #45). Update doc and tests.

	* scripts/clubak.py: Fix TypeError exception raised on unexpected input
	and accept 'node:message' line pattern (trac ticket #59).

	* scripts/clush.py: Add -B flag (trac ticket #60) to gather with stderr.

	* NodeSet.py: NodeSet constructor now raises a NodeSetParseError
	exception when unsupported type is used as input (trac ticket #53).

2010-02-21 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Fix a deadlock when a task is resumed two times from another
	thread (raise AlreadyRunningError instead). Added test.

	* Worker/Worker.py: Improve usage error handling for some methods (trac
	ticket #28), raising WorkerError when needed. Add library misusage tests.

2010-02-18 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Disable MsgTree buffering when not performing
	any gathering of results (when -b is not used).

	* Task.py: Allow disabling of MsgTree buffering (trac ticket #3) via
	'stdout_msgtree" and 'stderr_msgtree' Task default keywords, useful if we
	don't want MsgTree internal buffering for fully event-based scripts (eg.
	clush without -b). When disabled, any Task method accessing MsgTree data
	like iter_buffers() will raise a new exception (TaskMsgTreeError).

2010-02-17 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 beta 5 released.

2010-02-16 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Fix mixed-type comparisons, where, like standard set(),
	are allowed, instead of raising TypeError.

2010-02-15 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 beta 4 released.
	